--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,11 @@ else()
 	else()
 		message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 	endif()
+
+	if (CUDA_ENABLED)
+		set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -std=c++11)
+		SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
+	endif()
 endif()
 
 # Python bindings
