Added a Cuda projection test

--- a/RLcpp/rlutils/CMakeLists.txt
+++ b/RLcpp/rlutils/CMakeLists.txt
@@ -11,4 +11,4 @@ set(Sources
 	
 include_directories ("${PROJECT_SOURCE_DIR}")
 
-add_library(utils SHARED ${Headers} ${Sources})
+add_library(rlutils SHARED ${Headers} ${Sources})
