--- a/RLcpp/CMakeLists.txt
+++ b/RLcpp/CMakeLists.txt
@@ -2,6 +2,18 @@ include_directories ("${PROJECT_SOURCE_DIR}")
 
 add_subdirectory(rlutils)
 
+if (WIN32)
+	set(FILESTART "")
+	set(FILETYPE "dll")
+	set(TARGETFILETYPE "pyd")
+	set(TARGET_PY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIGURATION>")
+else(WIN32)
+	set(FILESTART "lib")
+	set(FILETYPE "so")
+	set(TARGETFILETYPE "so")
+	set(TARGET_PY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+endif(WIN32)
+
 set(LIB_NAME "PyUtils")
 set(PYTHON_LIBS ${PYTHON_LIBS} ${LIB_NAME})
 add_library(${LIB_NAME} SHARED function_traits.h numpy_utils.h numpy_eigen.h utils.cpp)
@@ -26,7 +38,7 @@ set_property(TARGET ${INSTALL_LIB} PROPERTY FOLDER python)
 
 # do the copying
 foreach(file_i ${PYTHON_LIBS})
-    add_custom_command(TARGET ${INSTALL_LIB} COMMAND ${CMAKE_COMMAND} -E copy ${TARGET_PY}/${file_i}.dll ${TARGET_PY}/${file_i}.pyd)
+    add_custom_command(TARGET ${INSTALL_LIB} COMMAND ${CMAKE_COMMAND} -E copy ${TARGET_PY}/${FILESTART}${file_i}.${FILETYPE} ${TARGET_PY}/${file_i}.${TARGETFILETYPE})
 endforeach()
 
 add_custom_command(TARGET ${INSTALL_LIB} COMMAND cd ${TARGET_PY} && python ${CMAKE_CURRENT_SOURCE_DIR}/setup.py install)
