Fixed old name in CMakeLists.txt

--- a/ODLpp/CMakeLists.txt
+++ b/ODLpp/CMakeLists.txt
@@ -14,14 +14,14 @@ else(WIN32)
 	set(TARGET_PY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 endif(WIN32)
 
-set(LIB_NAME "utils")
+set(LIB_NAME "odlpp_utils")
 set(PYTHON_LIBS ${PYTHON_LIBS} ${LIB_NAME})
 add_library(${LIB_NAME} SHARED utils.cpp)
 set_property(TARGET ${LIB_NAME} PROPERTY FOLDER python)
 target_link_libraries(${LIB_NAME} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} odlutils)
 
 if (CUDA_ENABLED)
-	set(LIB_NAME "cuda")
+	set(LIB_NAME "odlpp_cuda")
 	set(PYTHON_LIBS ${PYTHON_LIBS} ${LIB_NAME})
 	cuda_include_directories ("${PROJECT_SOURCE_DIR}")
 	CUDA_ADD_LIBRARY(${LIB_NAME} SHARED "cuda.cpp" "cuda.cu" "DeviceVector.h")
