--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "LCRUtils"]
-	path = LCRUtils
-	url = https://gits-15.sys.kth.se/LCR/LCRUtils
+[submodule "odl-cpp-utils"]
+	path = odl_cpp_utils
+	url = https://github.com/odlgroup/odl-cpp-utils.git
