ENH: make build and install work with Python 3
Cmake now uses the `PythonInterp` finder and applies `PYTHON_EXECUTABLE`
when running `setup.py install`. This automatically installs into the
right location instead of the hard-coded one.
The relative import in `__init__.py` is fixed, now the package works
with Python 3.

--- a/odlpp/CMakeLists.txt
+++ b/odlpp/CMakeLists.txt
@@ -23,7 +23,7 @@ foreach(file_i ${PYTHON_LIBS})
     add_custom_command(TARGET ${INSTALL_LIB} COMMAND ${CMAKE_COMMAND} -E copy ${TARGET_PY}/${FILESTART}${file_i}.${FILETYPE} ${TARGET_PY}/${file_i}.${TARGETFILETYPE})
 endforeach()
 
-add_custom_command(TARGET ${INSTALL_LIB} COMMAND cd ${TARGET_PY} && python ${CMAKE_CURRENT_SOURCE_DIR}/setup.py install)
+add_custom_command(TARGET ${INSTALL_LIB} COMMAND cd ${TARGET_PY} && ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/setup.py install)
 
 add_dependencies(${INSTALL_LIB} ${PYTHON_LIBS})
 
