--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "odl-cpp-utils"]
 	path = odl_cpp_utils
 	url = https://github.com/odlgroup/odl-cpp-utils.git
+[submodule "pybind11"]
+	path = pybind11
+	url = https://github.com/wjakob/pybind11
