--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/odlgroup/odl-cpp-utils.git
 [submodule "pybind11"]
 	path = pybind11
-	url = https://github.com/adler-j/pybind11.git
+	url = https://github.com/odlgroup/pybind11.git
