--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -18,6 +18,8 @@ requirements:
         - setuptools
         - numpy >=1.9
         - future >=0.14
+        - gcc <5  # [not win]
+        # Dependency for Windows compiler goes here if applicable
         - boost
     run:
         - nomkl
