--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -4,6 +4,7 @@ package:
 
 source:
     git_url: https://github.com/odlgroup/odlpp.git
+    git_rev: 71e48463c6464ca40fc245448d261a270cb856e9
     # git_rev: v0.2.3
 
 build:
@@ -13,21 +14,22 @@ build:
 
 requirements:
     build:
-        - python 2.7|>=3.4
+        - python
         - nomkl
         - setuptools
         - numpy >=1.9
         - future >=0.14
         - gcc <5    # [linux]
         - llvm      # [osx]
-        # Dependency for Windows compiler goes here if applicable
         - boost
+        - odl
     run:
         - nomkl
-        - python 2.7|>=3.4
+        - python
         - numpy >=1.9
         - future >=0.14
         - boost
+        - odl
 
 test:
     imports:
@@ -37,15 +39,14 @@ test:
         - pytest
 
 about:
-    home: https://github.com/odlgroup/odl
+    home: https://github.com/odlgroup/odlpp
     license: GPLv3+
     license_file: LICENSE
-    summary: "Operator Discretization Library - a versatile Python framework for rapid prototyping in Inverse Problems and related fields"
+    summary: ""
 
 extra:
     maintainers:
         - Jonas Adler (@adler-j)
         - Holger Kohr (@kohr-h)
-        - Ozan Öktem (@ozanoktem)
 
 
