--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
     git_url: https://github.com/odlgroup/odlpp.git
-    git_rev: 71e48463c6464ca40fc245448d261a270cb856e9
+    git_rev: plugin_build_test
     # git_rev: v0.2.3
 
 build:
