--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -4,8 +4,7 @@ package:
 
 source:
     git_url: https://github.com/odlgroup/odlpp.git
-    git_rev: plugin_build_test
-    # git_rev: v0.2.3
+    git_rev: plugintest
 
 build:
     script_env:
