MAINT: rename odlpp to odlcuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 
-project (odlpp)
+project (odlcuda)
 
 #Set binary dir
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
@@ -92,7 +92,7 @@ include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
 link_directories(${PYTHON_LIBRARIES})
 
 # Add sub directories as needed
-add_subdirectory (odlpp)
+add_subdirectory (odlcuda)
 if(NOT EXISTS "${CMAKE_SOURCE_DIR}/odl_cpp_utils/CMakeLists.txt")
     message(SEND_ERROR "odl_cpp_utils not initialized. Run 'git submodule update --init'." )
 endif()
