--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,14 +1,13 @@
 package:
-    name: odlpp
-    version: "0.2.0"
+    name: odlcuda
+    version: "0.3.0"
 
 source:
-    git_url: https://github.com/odlgroup/odlpp.git
-    # git_rev: v0.2.3
+    git_url: https://github.com/odlgroup/odlcuda.git
+    git_rev: conda-build
 
 build:
     script_env:
-        - CUDA_ROOT
         - CUDA_COMPUTE
 
 requirements:
@@ -18,29 +17,35 @@ requirements:
         - setuptools
         - numpy >=1.9
         - future >=0.14
+        - cudatoolkit
+        - boost
+        # Make sure to run "conda config --append channels odlgroup"
+        - odl >=0.3.0
+        # Compilers, needed for build only
         - gcc <5    # [linux]
         - llvm      # [osx]
-        # Dependency for Windows compiler goes here if applicable
-        - boost
+        # ??? # [win]
     run:
         - nomkl
         - python 2.7|>=3.4
         - numpy >=1.9
         - future >=0.14
+        - cudatoolkit
         - boost
+        - odl >=0.3.0
 
 test:
     imports:
-        - odlpp
+        - odlcuda
 
     requires:
         - pytest
 
 about:
-    home: https://github.com/odlgroup/odl
+    home: https://github.com/odlgroup/odlcuda
     license: GPLv3+
     license_file: LICENSE
-    summary: "Operator Discretization Library - a versatile Python framework for rapid prototyping in Inverse Problems and related fields"
+    summary: "CUDA backend for ODL"
 
 extra:
     maintainers:
